# km3

analysis/: analysisL0.py  online_reco.py
h5Converter/: h5Concatenate.py  setenv.sh  setenv.sh~
h5Converter/examples/: Makefile  h5ReadJEvtAndMC.cc
h5Converter/src/: KM3H5Converter.hh  KM3H5InfoFromInput.hh  KM3H5InserterDataType.hh  KM3H5RegisteredDataType.hh  KM3H5Wrappers.hh
onlineSoftware/: CMakeLists.txt  setenv.csh  setenv.sh
onlineSoftware/data/: muonReconstruction_parameters_orca_1DU.txt
onlineSoftware/doc/: software_package.rst
onlineSoftware/examples/: CMakeLists.txt  KM3OnlineRead.cc  KM3OnlineRead.py  KM3OnlineReadGraphic.cc  KM3OnlineReadTag.cc
onlineSoftware/onlineMainScripts/: CMakeLists.txt  KM3OnlineRecos.cc
onlineSoftware/onlineeventmanager/: CMakeLists.txt  KM3OnlineDataTypes.hh  KM3OnlineEvent.hh  KM3OnlineGraphic.cc  KM3OnlineGraphic.hh  KM3OnlineMultiVariables.hh  KM3OnlineTags.hh  LinkDef.hh
onlineSoftware/pybindings/: CMakeLists.txt  JControlHostObjectIteratorPy.cc  JLigierObjectIteratorPy.cc  JNetBoostPyModule.cc  KM3OnlineBoostPyModule.cc  KM3OnlineEvent.cc  KM3OnlineMultiVariables.cc  KM3OnlineTrack.cc
onlineSoftware/recotools/: KM3OnlineMultiVariablesCalculator.hh  ShowerFit.hh  ShowerPdf.hh  showrec_util.hh
onlineSoftware/utilities/: KM3OnlineEventViewer.cc  KM3OnlineFileWriter.cc  KM3OnlineFileWriter.hh  KM3OnlineToolKit.hh
onlineSoftware2/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  requirements.txt  setenv.csh  setenv.sh
onlineSoftware2/KM3Online/: CMakeLists.txt  KM3OnlineDataTypes.hh  KM3OnlineEvent.cc  KM3OnlineEvent.hh  KM3OnlineMultiVariables.hh  KM3OnlineScoredEvent.cc  KM3OnlineScoredEvent.hh  KM3OnlineTags.hh  KM3OnlineTrack.hh  LinkDef.hh
onlineSoftware2/KM3OnlineExamples/: CMakeLists.txt  KM3OnlineBuildKM3OnlineScoredEvent.cc  KM3OnlineBuildKM3OnlineScoredEvent.py  KM3OnlineReadKM3OnlineEvent.cc  KM3OnlineReadKM3OnlineEventTag.cc
onlineSoftware2/KM3OnlineMains/: CMakeLists.txt  KM3OnlineEventScorer.py  KM3OnlineMain.py  KM3OnlineRecos.cc
onlineSoftware2/KM3OnlinePybindings/: CMakeLists.txt  JControlHostObjectIteratorPy.cc  JControlHostObjectOutputPy.cc  JDAQHeader.cc  JLigierObjectIteratorPy.cc  JNetBoostPyModule.cc  KM3OnlineBoostPyModule.cc  KM3OnlineEvent.cc  KM3OnlineMultiVariables.cc  KM3OnlineScoredEvent.cc  KM3OnlineTrack.cc
onlineSoftware2/KM3OnlineRecoTools/: AANetShowerFit.hh  KM3OnlineJRecos.hh  KM3OnlineLineFit.hh  KM3OnlineMultiVariablesCalculator.hh  KM3OnlineMultiVariablesCalculator.hh~
onlineSoftware2/KM3OnlineUtilities/: CMakeLists.txt  KM3H5OnlineConverter.hh  KM3OnlineEventViewer.cc  KM3OnlineFileWriter.cc  KM3OnlinePlotterForMonitoring.py  KM3OnlineToolKit.hh
onlineSoftware2/data/: muonReconstruction_parameters_arca_1DU.txt
onlineSoftware2/doc/: README  conf.py  index.rst  introduction.rst  project_description.rst  software_package.rst
